--- a/app/views/scheduled_groups/invoice.html.erb
+++ b/app/views/scheduled_groups/invoice.html.erb
@@ -34,15 +34,16 @@
                                  <td></td>
                                </tr>
                            <% end %>
-                           <tr>
-                             <td><%= @group.session.payment_schedule.final_payment_date.strftime("%m/%d/%Y") %></td>
-                             <td>Final Payment</td>
-                             <td><% unless @group.final_pay_amount.nil? %>
-                                   <%= number_to_currency(@group.final_pay_amount) %><% end %>
-                             </td>
-                             <td></td>
-                             <td></td>
-                           </tr>
+                           <% final_pay_date = @group.session.payment_schedule.final_due_at_start? ? @group.session.session_start_date.to_date : @group.session.payment_schedule.final_payment_date %>
+                               <tr>
+                                 <td><%= final_pay_date.strftime("%m/%d/%Y") %></td>
+                                 <td>Final Payment</td>
+                                 <td><% unless @group.final_pay_amount.nil? %>
+                                       <%= number_to_currency(@group.final_pay_amount) %><% end %>
+                                 </td>
+                                 <td></td>
+                                 <td></td>
+                               </tr>
                            <tr>
                              <td></td>
                              <td>Total</td>
@@ -96,7 +97,8 @@
         </div>
     <div class="panel">
         <% if @group.session.payment_schedule.second_payment_date.nil? || @group.second_payment_date %>
-            <h3><%= "Current Invoice Due: #{@group.session.payment_schedule.final_payment_date.strftime("%m/%d/%Y")}. A 10 percent late fee will be applied to all late payments."%></h3>
+            <% final_pay_date = @group.session.payment_schedule.final_due_at_start? ? @group.session.session_start_date.to_date : @group.session.payment_schedule.final_payment_date %>
+            <h3><%= "Current Invoice Due: #{final_pay_date.strftime("%m/%d/%Y")}. A 10 percent late fee will be applied to all late payments."%></h3>
         <% else %>
             <h3><%= "Current Invoice Due: #{@group.session.payment_schedule.second_payment_date.strftime("%m/%d/%Y")}. A 10 percent late fee will be applied to all late payments."%></h3>
         <% end %>
