--- a/app/views/registration/_terms_and_conditions.html.erb
+++ b/app/views/registration/_terms_and_conditions.html.erb
@@ -1,19 +1,13 @@
 <div id="tccontainer"><h3>Terms and Conditions</h3>
     <p>By clicking on the button below to confirm this registration, I am agreeing on behalf of my church to all of Sierra Service Projects terms and conditions, which include the following:</p>
         <ul>
-          <li><%= "1. All payments made to SSP are nonrefundable and nontransferable. #{Time.now}" %></li>
+          <li>"1. All payments made to SSP are nonrefundable and nontransferable."</li>
           <li>2. A 10 percent late fee will be applied to the balance of any payment that is made after the required payment due date.</li>
-          <li>3. Your second payment is due on March 1, 2013 and your final payment is due on June 1, 2013.</li>
-          <li>4. All adult volunteers must have undergone a national criminal background screening process and must be suitable to work with youth.</li>
-          <li>5. Volunteers are not covered by Workers' Compensation and each participant, both youth and adult, is responsible for his/her own medical expenses while at the project.</li>
-          <li>6. Email is the primary means of communicating (other than via the phone) with SSP.</li>
+          <li><%= @second_pay_line_text %></li>
+          <li><%= @final_pay_line_text %></li>
+          <li>5. All adult volunteers must have undergone a national criminal background screening process and must be suitable to work with youth.</li>
+          <li>6. Volunteers are not covered by Workers' Compensation and each participant, both youth and adult, is responsible for his/her own medical expenses while at the project.</li>
+          <li>7. Email is the primary means of communicating (other than via the phone) with SSP.</li>
         </ul>
-        <ul class="check-statement">
-          <li>
-            <%= check_box_tag("accept_terms", "accepted", false) %>
-            <label>I have read and accept these terms and conditions.</label>
-          </li>
-        </ul>
-
 
 </div>
