--- a/app/views/registration/new.html.erb
+++ b/app/views/registration/new.html.erb
@@ -50,11 +50,11 @@
                 <div class="form">
                     <div class="select_container">
                         <td><%= r.label "Select group type" %></td>
-                        <td id="group_type"><%= select_tag "group_type", options_for_select(@group_types = SessionType.all.map{|a| a.name}) %></td>
+                        <td id="group_type"><%= select_tag "group_type", options_for_select(@group_types = SessionType.all.map{|a| a.name}),
+                                                           {:prompt => "Select one", :include_blank => false} %></td>
                     </div>
                     <div class="clear"></div>
                   <div id="sessions_for_type"></div>
-
                   <div class = "errors" id="error_text_group"></div>
                     <div class="button_container">
                         <input id="submit_second" type="button" value = "Go to Next Step" class = "next_button" >
@@ -70,7 +70,7 @@
                 <div class="form">
                   <div id='site_info'></div>
                   <table id="info_table_third" class="registration_table"></table>
-                  <table>
+                  <table id="third_step_table">
                       <tr>
                         <td><%= r.label "Site" %></td>
                         <td id="site_selector"></td>
@@ -80,6 +80,8 @@
                         <td id="session_selector"></td>
                       </tr>
                   </table>
+                  <h4 id="no_availability_text">All of the available sessions for this type of group are currently full.
+                    To be placed on a waiting list, please call the SSP office at 916-488-6441.</h4>
                   <h3 id="session_name" class align="center"></h3>
                   <div class="clear"></div>
                   <div class = "errors" id="error_text_selections"></div>
@@ -185,27 +187,25 @@
                 <h1>Step 7: Make Payment</h1>
                 <div class="hidden" id="step_six_data"></div>
                 <div class="form">
-                  <!--<h4>You have two options to make your deposit payment.</h4>-->
-                  <!--<h4>Option One: You may proceed to SSP's secure payment gateway and use a credit or debit-->
-                    <!--card to complete your deposit payment. SSP does not record or save your credit card information.</h4>-->
-                  <!--<div class="clear"></div>-->
+                  <h4>You have two options to make your deposit payment.</h4>
+                  <h4>Option One: You may proceed to SSP's secure payment gateway and use a credit or debit
+                    card to complete your deposit payment. SSP does not record or save your credit card information.</h4>
+                  <div class="clear"></div>
                   <div class="button_container">
-                    <div><h4>Option One: You may proceed to SSP's secure payment gateway and use a credit or debit
-                      card to complete your deposit payment. SSP does not record or save your credit card information.</h4></div>
-                    <input id="pay_by_cc" type="button" value = "Pay By Credit Card" class = "next_button" >
+                      <input id="pay_by_cc" type="button" value = "Pay By Credit Card" class = "next_button" >
                   </div>
+                  <div class="clear"></div>
+                  <h4></h4>
                   <h4>Option Two: You may mail a check to the SSP office. Please include a copy of your confirmation
                       email or printed copy of the confirmation screen (this is the next screen you will see).
                       Payment must be received promptly; otherwise, your registration may be cancelled. Checks
                       should be made payable to Sierra Service Project.</h4>
-                  <div class="clear"></div>
                   <div class="button_container">
                     <input id="pay_by_check" type="button" value = "Pay By Check" class = "next_button" >
                   </div>
                 </div>
                 <div class="clear"></div>
               </div>
-
 
             <div id="eighth_step">
               <h1>Step 8: Registration Complete!</h1>
