--- a/app/assets/stylesheets/registration.css
+++ b/app/assets/stylesheets/registration.css
@@ -184,7 +184,7 @@ input[type="submit"]:focus, input[type="button"]:focus {
             /*display: block;*/
             /*padding-bottom: 10px;*/
             /*background: url("print.png") no-repeat;*/
-        }
+        /*}*/
         .return_button {
             margin-left: auto;
             margin-right: auto;
