Added active flag to Session after failing to find another solution for de-activating sessions.

--- a/app/views/registration/_terms_and_conditions.html.erb
+++ b/app/views/registration/_terms_and_conditions.html.erb
@@ -1,7 +1,7 @@
 <div id="tccontainer"><h3>Terms and Conditions</h3>
     <p>By clicking on the button below to confirm this registration, I am agreeing on behalf of my church to all of Sierra Service Projects terms and conditions, which include the following:</p>
         <ul>
-          <li>"1. All payments made to SSP are nonrefundable and nontransferable."</li>
+          <li>1. All payments made to SSP are nonrefundable and nontransferable.</li>
           <li>2. A 10 percent late fee will be applied to the balance of any payment that is made after the required payment due date.</li>
           <li><%= @second_pay_line_text %></li>
           <li><%= @final_pay_line_text %></li>
