--- a/app/views/liaisons/_schedule_info.html.erb
+++ b/app/views/liaisons/_schedule_info.html.erb
@@ -13,6 +13,7 @@
         <th>Participant Info</th>
         <th>Balance</th>
         <th>Payment</th>
+        <th></th>
         <% if can? :create, Adjustment %><th>Adjust</th><% end %>
       </tr>
       </thead><% i = 0 %>
@@ -29,10 +30,12 @@
             } and ends on #{g.session.period.end_date.strftime("%m/%d/%y")}. Click to see what other groups are joining you at this session." %></td>
             <td><%= link_to "Update Roster", show_roster_path(g.roster_id),
                             :title => "Click to update the participant rosters." %></td>
-            <td><%= link_to number_to_currency(g.current_balance),
-                            invoice_path(g.id), :title => "Click to review and print your current invoice." %></td>
+            <td><%= link_to number_to_currency(g.current_balance_due),
+                            invoice_path(g.id), :title => "View statement and account activity." %></td>
             <td><%= link_to "Make Payment", record_payment_path(:group_id => g.id, :group_status => 'schedule'),
                             :title => "Click to make a payment." %></td>
+            <td><%= link_to "View Invoice", invoice_path(g.id, :format => "pdf"),
+                            :title => "View and print current invoice." %></td>
             <% if can? :create, Adjustment %>
                 <td><%= link_to "Adjustment", make_adjustment_path(g.id),
                                 :title => "Click to make an adjustment (new church discount, scholarship, etc)." %></td>
